# ED1_Prova2

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: busca.cpp.AFD1FCAA670FA867.idx  cronometro.cpp.E355A6CAACC15804.idx  gerador_dados.cpp.544F9C861CC6F8A6.idx  main.cpp.BB8DD9B4E8CA544C.idx  ordenacao.cpp.ED52C74105C08519.idx
ED1_Prova2-main/: README.md
ED1_Prova2-main/codigo/: busca.cpp
Gráficos/: GráficoNúmeroDeComparação(busca).py  GráficoNúmeroDeComparação(ordenação).py  GráficoNúmeroDeTroca(ordenação).py  GráficoTempoXQuantidade(busca).py  GráficoTempoXQuantidade(ordenação).py  pegar_matplotlib.txt
codigo/: busca.cpp  cronometro.cpp  gerador_dados.cpp  gerador_dados.hpp  main.cpp  ordenacao.cpp
